<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAFDFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="58dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="635dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Titol"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center_horizontal"
            android:text="@string/titol"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="538dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="446dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/valor" />

            <Spinner
                android:id="@+id/Opcions"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/Theme.Act1_AplicaciobBasica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/subtitol"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/segons_total"
                style="@style/Theme.Act1_AplicaciobBasica"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_segons" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Theme.Act1_AplicaciobBasica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/segons" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minuts_total"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_min" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hores_total"
                style="@style/Theme.Act1_AplicaciobBasica"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_hores" />

            <TextView
                android:id="@+id/textView9"
                style="@style/Theme.Act1_AplicaciobBasica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hores" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/anys_total"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_anys" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/anys" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:text="@string/desenvolupada" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>